@@ -31,13 +31,6 @@
       <menuitem name="MachineQuitMenu" action="MachineQuit"/>
     </menu>
 
-    <menu name="EditMenu" action="Edit">
-      <menuitem name="EditCopyMenu" action="EditCopy"/>
-      <menuitem name="EditPasteMenu" action="EditPaste"/>
-      <separator/>
-      <menuitem name="EditPreferencesMenu" action="EditPreferences"/>
-    </menu>
-
     <menu name="ViewMenu" action="View">
       <menuitem name="ViewToolbarMenu" action="ViewToolbar"/>
       <menuitem name="ViewStatusbarMenu" action="ViewStatusbar"/>
