@@ -1,5 +1,15 @@
 2007-10-03  Jonh Wendell <jwendell@gnome.org>
 
+	* src/vinagre-tab.c,
+	  src/vinagre-window.c,
+	  src/vinagre-tab.h,
+	  src/vinagre-ui.h,
+	  data/vinagre-ui.xml:
+	  - Added clipboard support (copy and paste)
+	  - Dropped edit menu, it's not being used anyway.
+
+2007-10-03  Jonh Wendell <jwendell@gnome.org>
+
 	* src/vinagre-tab.c:
 	  - Connect to auth-unsupported signal from gtk-vnc, displaying a
 	    message to the user if we don't support the auth type from the
